# terragrate

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: linux-release.yml  macos-release.yml  test-all.yml
fixtures/migrations/: complex.json  move_to_module.json  multi_step.json
fixtures/output/: complex_full_commands  complex_full_state
fixtures/state/: current  full
sample/: main.tf
sample/network/: main.tf  outputs.tf  variables.tf
src/: command.rs  config.rs  element.rs  format_list.rs  lib.rs  main.rs  migration.rs  state.rs  transformation.rs
tests/: migration_integration_test.rs
