[package]
name = "terragrate"
version = "0.5.0"
authors = ["Mario Fernandez"]
description = "Simplifies migrating terraform state based on migration files"
edition = "2018"
license = "MIT"
homepage = "https://github.com/sirech/terragrate"
repository = "https://github.com/sirech/terragrate"
readme = "README.md"
keywords = ["terraform", "migrations", "infrastructure"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
toml = "0.5.6"
serde_derive = "1.0.116"
serde = "1.0.114"
serde_json = "1.0.56"
anyhow = "1.0.31"
prettydiff = "0.3.1"
