[package]
name = "terragrate"
version = "0.5.0"
authors = ["Mario Fernandez"]
description = "Simplifies migrating terraform state based on migration files"
edition = "2018"
license = "MIT"
homepage = "https://github.com/sirech/terragrate"
repository = "https://github.com/sirech/terragrate"
readme = "README.md"
keywords = ["terraform", "migrations", "infrastructure"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.13"
toml = "0.5.8"
serde_derive = "1.0.123"
serde = "1.0.123"
serde_json = "1.0.61"
anyhow = "1.0.38"
prettydiff = "0.4.0"
